# laboratory

./: .gitignore  LICENSE  README.md  pyproject.toml  run.py
pyscripts/: parser.py  schema.py
results/: README.md
